--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Link CSS -->
-    <link rel="stylesheet" href="css/styles.css">
     <!-- Link CSS Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Link de font awesome -->
+    <!-- Link de Font Awesome -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <title>Crypto Dashboard</title>
@@ -15,92 +13,107 @@
 <body>
     <!-- Header -->
     <header class="bg-dark text-white py-3 shadow-sm">
-    <div class="container">
-        <h1 class="h4 text-center mb-0">Crypto Dashboard</h1>
-    </div>
+        <div class="container">
+            <h1 class="h4 text-center mb-0">Crypto Dashboard</h1>
+        </div>
     </header>
 
     <!-- Main -->
     <main class="container py-4">
 
-    <!-- Filtros -->
-    <div class="row mb-4">
-        <div class="col-md-6 mb-2">
-            <div class="form-group">
-                <label for="buscador" class="font-weight-bold">Buscar criptomoneda</label>
-                <div class="input-group">
-                    <input type="text" id="buscador" class="form-control" placeholder="Ej: Bitcoin, ETH, etc.">
-                <div class="input-group-append">
-                    <button id="limpiarBuscador" class="btn btn-outline-secondary" type="button">
-                        <i class="fas fa-times"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        </div>
-        <div class="col-md-4 mb-2">
-            <div class="form-group">
-                <label for="buscador" class="font-weight-bold">Filtrar por rango de precio</label>
-                <div class="input-group">
-                    <select id="filtroRango" class="form-control">
-                        <option value="todos">Todos</option>
-                        <option value="menor500">Menos de $500</option>
-                        <option value="500-1000">Entre $500 y $1000</option>
-                        <option value="mayor1000">Más de $1000</option>
-                    </select>
-                    <div class="input-group-append">
-                        <button id="limpiarRango" class="btn btn-outline-secondary" type="button">
-                            <i class="fas fa-times"></i>
-                        </button>
+        <!-- Filtros -->
+        <div class="row mb-4 align-items-end">
+            <!-- Buscador -->
+            <div class="col-md-4 mb-2">
+                <div class="form-group mb-0">
+                    <label for="buscador" class="font-weight-bold">Buscar criptomoneda</label>
+                    <div class="input-group">
+                        <input type="text" id="buscador" class="form-control" placeholder="Ej: Bitcoin, ETH, etc.">
+                        <div class="input-group-append">
+                            <button id="limpiarBuscador" class="btn btn-outline-secondary" type="button">
+                                <i class="fas fa-times"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
+            </div>
+
+            <!-- Filtro por rango -->
+            <div class="col-md-4 mb-2">
+                <div class="form-group mb-0">
+                    <label for="filtroRango" class="font-weight-bold">Filtrar por rango de precio</label>
+                    <div class="input-group">
+                        <select id="filtroRango" class="form-control">
+                            <option value="todos">Todos</option>
+                            <option value="menor500">Menos de $500</option>
+                            <option value="500-1000">Entre $500 y $1000</option>
+                            <option value="mayor1000">Más de $1000</option>
+                        </select>
+                        <div class="input-group-append">
+                            <button id="limpiarRango" class="btn btn-outline-secondary" type="button">
+                                <i class="fas fa-times"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Boton de Categorías -->
+            <div class="col-md-4 mb-2 d-flex align-items-end">
+                <div class="form-group mb-0">
+                    <label for="filtrarPorCategorias" class="font-weight-bold">Renderizar tabla de categorias</label>
+                    <button id="filtrarPorCategorias" class="btn btn-outline-primary btn-block d-flex align-items-center justify-content-center">
+                        <i class="fas fa-filter mr-2"></i> Categorías
+                    </button>
+                </div>
                
-                
+            </div>
+
+
+        </div>
+
+        <!-- Botón Volver al listado -->
+        <div id="contenedorVolverListado" class="text-center mb-3"></div>
+
+        <!-- Botón Refrescar -->
+        <div class="row">
+            <div class="col-12 text-center">
+                <button id="buscadorRefrescar" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
+                    <span>Refrescar</span>
+                    <i class="fas fa-sync-alt ml-2" style="font-size: 0.9em; line-height: 1;"></i>
+                </button>
             </div>
         </div>
 
-       <div class="col-12 text-center mt-2">
-    <div class="col-12 text-center mt-2">
-        <button id="buscadorRefrescar" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
-            <span>Refrescar</span>
-            <i class="fas fa-sync-alt ml-2" style="font-size: 0.9em; line-height: 1;"></i>
-        </button>
-    </div>
 
+        <!-- Tabla de resultados -->
+        <div class="mt-4 table-responsive shadow-sm rounded">
+            <table class="table table-hover text-center mb-0">
+            <thead class="thead-dark">
+                <tr>
+                <th>ID</th>
+                <th>Símbolo</th>
+                <th>Nombre</th>
+                <th>Precio (USD)</th>
+                <th>% Cambio 24h</th>
+                <th>Volumen 24h</th>
+                </tr>
+            </thead>
+            <tbody id="contenedorGrillaCards"></tbody>
+            </table>
+        </div>
 
-</div>
-    </div>
-
-    <!-- Tabla de resultados -->
-    <div class="table-responsive shadow-sm rounded">
-        <table class="table table-hover text-center mb-0">
-        <thead class="thead-dark">
-            <tr>
-            <th>ID</th>
-            <th>Símbolo</th>
-            <th>Nombre</th>
-            <th>Precio (USD)</th>
-            <th>% Cambio 24h</th>
-            <th>Volumen 24h</th>
-            </tr>
-        </thead>
-        <tbody id="contenedorGrillaCards"></tbody>
-        </table>
-    </div>
-
-    <!-- Paginador -->
-    <nav class="mt-4">
-        <ul class="pagination justify-content-center flex-wrap" id="paginador">
-        <!-- Botones generados con JS -->
-        </ul>
-    </nav>
+        <!-- Paginador -->
+        <nav class="mt-4">
+            <ul class="pagination justify-content-center flex-wrap" id="paginador">
+                <!-- Botones generados dinamicamente con JS -->
+            </ul>
+        </nav>
 
     </main>
 
     <!-- Footer -->
     <footer class="bg-light text-center py-3 mt-5 border-top">
-    <small>&copy; 2025 Crypto Dashboard</small>
+        <small>&copy; 2025 Crypto Dashboard</small>
     </footer>
 
 
